fixing spacing and links.

--- a/responsive.css
+++ b/responsive.css
@@ -76,10 +76,6 @@
 		width: 150px;
 		letter-spacing: 1.95px;
 	}
-
-	.nav-button:hover {
-		color: #FABB02;
-	}
 }
 
 /* l */
@@ -130,11 +126,20 @@
 
 	.gallery_image {
 		transform: scale(1);
-  		transition: all 1s ease-out 100ms;
+		transition: all 1s ease-out 100ms;
 	}
 
 	.gallery_image:hover {
 		transform: scale(1.05);
+	}
+
+	.nav-list-item {
+		transform: translate(0, 0);
+		transition: transform 100ms ease-out 100ms;
+	}
+
+	.nav-list-item:hover {
+		transform: translate(0, 5px);
 	}
 
 	#work {
